--- a/styles/detailpagina.css
+++ b/styles/detailpagina.css
@@ -149,7 +149,7 @@ body {
   }
 
   .artikel_foto {
-    margin-top: 20px;
+    /* margin-top: 20px; */
     width: 230px;
     margin-left: 240px;
   }
@@ -187,7 +187,7 @@ body {
     max-width: 25px;
   }
 
-  .heart-icon {
+  /* .heart-icon {
     top: 30px;
-  }
+  } */
 }
