--- a/styles/header.css
+++ b/styles/header.css
@@ -13,7 +13,7 @@
 .line2 {
   position: absolute;
   width: 100%;
-  height: 7px;
+  height: 5px;
   margin: 18px 0;
   z-index: 0;
 }
@@ -26,7 +26,7 @@
 
 .line2 {
   background-color: #f6f6f6;
-  top: 97px;
+  top: 96px;
   z-index: 2;
 }
 
@@ -44,6 +44,10 @@
   font-style: normal;
   color: #f6f6f6;
   margin-top: 10px;
+}
+
+.header_icons:hover {
+  transform: scale(1.1);
 }
 
 .politiek {
