--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,11 @@
   margin: 0;
   padding: 0;
   font-family: "neue-haas-grotesk-text", sans-serif;
+  
+}
+
+body {
+  overflow-x: hidden; /* Voorkom horizontale scrollbar op de hele pagina */
 }
 
 #logo {
@@ -156,7 +161,7 @@ p {
 
 .flex1 {
   flex: 1;
-  margin-right: 5px;
+ 
 }
 
 .flex2 {
